# FATChecker

./: .gitignore  CMakeLists.txt  README.md  fuzzy_compile_script.sh  main.cpp
FAT_fixer/: FATFileSystem.cpp
data/: fat12_boot.img  fat12_root.img  fat12_table.img  fat32_test_corrupted_root_and_data.img
includes/: AnalyzersFAT12.cpp  AnalyzersFAT12.hpp  AnalyzersFAT16.cpp  AnalyzersFAT16.hpp  AnalyzersFAT32.cpp  AnalyzersFAT32.hpp  FATTableStructs.hpp  FATstructs.hpp  FixFAT16.cpp  FixFAT16.hpp  FixFAT32.hpp  file.cpp  file.hpp  readFunctions.cpp  readFunctions.hpp
mountpoint/: file1.txt
sources/: AnalyzersFAT12.cpp  AnalyzersFAT16.cpp  AnalyzersFAT32.cpp  FixFAT16.cpp  FixFAT32.cpp  readFunctions.cpp
